updateHttp和服务详情接口实现完成，修改部分bug
